k8s_practice_yml/smartspend_deploy/frontend_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssfrontend-deployment
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ssfrontendapp
  template:
    metadata:
      labels:
        app: ssfrontendapp
    spec:
      containers:
      - name: ssfrontendcontainer
        image: doctorstrangelacrregistry.azurecr.io/dr-strange-prod:v1
        resources:
          requests:
            memory: "1Gi"
            cpu: "50m"
          limits:
            memory: "10Gi"
            cpu: "100m"
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: ssfrontendsvc
  namespace: test
spec:
  type: ClusterIP
  selector:
    app: ssfrontendapp
  ports:
  - port: 80
    targetPort: 80
