k8s_practice_yml/smartspend_deploy/ingress_rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rule-frontend-agw
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: aksdemo.refactorq.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssfrontendsvc 
                port:
                  number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rule-backend-agw
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: dev-api.smartspendops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssbackendsvc 
                port:
                  number: 8000
